[package]
name = "yt-clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
indicatif = "0.17"
sanitize-filename = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
